add controller unit tests update service unit tests